# Number_Recognition_cpp_client

./: CMakeLists.txt
headers/: App.h  Button.h
src/: App.cpp  Button.cpp  main.cpp
